@@ -2,11 +2,10 @@ package ohai.newslang.service.subscribe;
 
 import lombok.RequiredArgsConstructor;
 import ohai.newslang.configuration.jwt.TokenDecoder;
+import ohai.newslang.domain.dto.request.RequestResult;
 import ohai.newslang.domain.entity.member.Member;
 import ohai.newslang.domain.entity.subscribe.MemberSubscribeItem;
 import ohai.newslang.domain.entity.subscribe.MemberSubscribeMediaItem;
-import ohai.newslang.domain.entity.subscribe.SubscribeCategory;
-import ohai.newslang.domain.entity.subscribe.SubscribeKeyword;
 import ohai.newslang.domain.entity.subscribe.subscribeReference.Media;
 import ohai.newslang.repository.member.MemberRepository;
 import ohai.newslang.repository.subscribe.MemberSubscribeItemRepository;
@@ -14,6 +13,7 @@ import ohai.newslang.repository.subscribe.MemberSubscribeMediaItemRepository;
 import ohai.newslang.repository.subscribe.SubscribeCategoryRepository;
 import ohai.newslang.repository.subscribe.SubscribeKeywordRepository;
 import ohai.newslang.repository.subscribe.subscribeReference.MediaRepository;
+import org.springframework.boot.autoconfigure.amqp.RabbitRetryTemplateCustomizer;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -28,74 +28,89 @@ public class MemberSubscribeItemServiceImpl implements MemberSubscribeItemServic
     private final MemberRepository memberRepository;
     private final MemberSubscribeItemRepository memberSubscribeItemRepository;
     private final MemberSubscribeMediaItemRepository memberSubscribeMediaItemRepository;
-    private final MemberSubscribeMediaItemRepository subscribeMediaRepository;
-    private final SubscribeKeywordRepository subscribeKeywordRepository;
-    private final SubscribeCategoryRepository subscribeCategoryRepository;
     private final MediaRepository mediaRepository;
     private final TokenDecoder td;
 
     @Override
     @Transactional
-    public void updateSubscribeCategory(Long memberId, List<String> categoryNameList) {
-        MemberSubscribeItem memberSubscribeItem = memberSubscribeItemRepository.findByMemberId(memberId).orElse(null);
-        if (memberSubscribeItem == null){
-            Member member = memberRepository.findById(memberId).get();
-            memberSubscribeItem = new MemberSubscribeItem();
-            memberSubscribeItem.setMember(member);
-            memberSubscribeItemRepository.save(memberSubscribeItem);
-        }
-        else {
-            memberSubscribeItem.clearCategory();
-        }
+    public RequestResult updateSubscribeCategory(List<String> categoryNameList) {
+        Long memberId = td.currentMemberId();
+        MemberSubscribeItem memberSubscribeItem = memberSubscribeItemRepository
+        .findSubscribeCategoryByMemberId(memberId)
+        .orElseGet(MemberSubscribeItem::new);
 
+        memberSubscribeItem.setMember(memberRepository.findByTokenId(memberId));
+        memberSubscribeItem.clearCategory();
+
+        memberSubscribeItemRepository.save(memberSubscribeItem);
         memberSubscribeItem.addCategory(categoryNameList);
+        return RequestResult.builder()
+        .resultCode("200")
+        .resultMessage("구독 카테고리 갱신 성공")
+        .build();
     }
 
     @Override
     @Transactional
-    public void updateSubscribeKeyword(Long memberId, List<String> keywordNameList) {
-        MemberSubscribeItem memberSubscribeItem = memberSubscribeItemRepository.findByMemberId(memberId).orElse(null);
-        if (memberSubscribeItem == null){
-            Member member = memberRepository.findById(memberId).get();
-            memberSubscribeItem = new MemberSubscribeItem();
-            memberSubscribeItem.setMember(member);
-            memberSubscribeItemRepository.save(memberSubscribeItem);
-        }
-        else {
-            memberSubscribeItem.clearKeyword();
-        }
-
+    public RequestResult updateSubscribeKeyword(List<String> keywordNameList) {
+        Long memberId = td.currentMemberId();
+        MemberSubscribeItem memberSubscribeItem = memberSubscribeItemRepository
+        .findSubscribeKeywordByMemberId(memberId).orElseGet(MemberSubscribeItem::new);
+        memberSubscribeItem.setMember(memberRepository.findByTokenId(memberId));
+        memberSubscribeItem.clearKeyword();
+        memberSubscribeItemRepository.save(memberSubscribeItem);
         memberSubscribeItem.addKeyword(keywordNameList);
+        return RequestResult.builder()
+        .resultCode("200")
+        .resultMessage("구독 카테고리 갱신 성공")
+        .build();
     }
 
     @Override
     @Transactional
-    public void updateSubscribeMediaItems(Long memberId, List<String> subscribeItemNameList) throws Exception {
+    public RequestResult updateSubscribeMediaItems(List<String> subscribeItemNameList) {
+        Long memberId = td.currentMemberId();
         List<Media> mediaList = mediaRepository.findByNameIn(subscribeItemNameList);
-        if (mediaList.isEmpty()) throw new Exception("Not exist media");
-        // findOne -> findById + get() 메서드(Optional개봉)
-        MemberSubscribeItem memberSubscribeItem = memberSubscribeItemRepository.findByMemberId(memberId).orElse(null);
-        if (memberSubscribeItem == null){
-            Member member = memberRepository.findById(memberId).get();
-            memberSubscribeItem = new MemberSubscribeItem();
-            memberSubscribeItem.setMember(member);
-            memberSubscribeItemRepository.save(memberSubscribeItem);
+        if (mediaList.size() != subscribeItemNameList.size()){
+            return RequestResult.builder()
+            .resultCode("202")
+            .resultMessage("존재하지 않는 언론사가 포함되었습니다.")
+            .build();
         }
-        else {
-            // 기존 데이터 조회
-            Long memberSubscribeItemId = memberSubscribeItem.getId();
-            List<MemberSubscribeMediaItem> memberSubscribeMediaItems = memberSubscribeMediaItemRepository.findByMemberSubscribeItemId(memberSubscribeItemId);
-            // 기존 데이터 삭제 진행
-            List<Long> ids = memberSubscribeMediaItems.stream()
-                    .map(s -> s.getId())
-                    .collect(Collectors.toList());
-            memberSubscribeItem.removeMemberSubscribeMediaItems(ids);
-        }
-        memberSubscribeItem.addMemberSubscribeMediaItems(mediaList);
+
+        MemberSubscribeItem memberSubscribeItem = memberSubscribeItemRepository
+        .findSubscribeMediaByMemberId(memberId)
+        .orElseGet(this::createMemberSubscribeInfo);
+
+        memberSubscribeItem
+        .removeMemberSubscribeMediaItems(memberSubscribeItem
+        .getMemberSubscribeMediaItemList().stream()
+        .map(MemberSubscribeMediaItem::getId).toList());
+
+        return RequestResult.builder()
+                .resultCode("200")
+                .resultMessage("구독 언론사 갱신 성공")
+                .build();
     }
 
+    private MemberSubscribeMediaItem subscribeMedia(Media media) {
+        MemberSubscribeMediaItem memberSubscribeMediaItem = new MemberSubscribeMediaItem();
+        memberSubscribeMediaItem.setMedia(media);
+
+        return memberSubscribeMediaItemRepository
+                .save(memberSubscribeMediaItem);
+    }
+    private MemberSubscribeItem createMemberSubscribeInfo(){
+        MemberSubscribeItem memberSubscribeItem = new MemberSubscribeItem();
+        memberSubscribeItem.setMember(memberRepository.findByTokenId(td.currentMemberId()));
+        return memberSubscribeItemRepository.save(memberSubscribeItem);
+    }
+
+    // 확인
     @Override
-    public MemberSubscribeItem getMemberSubscribeItem(Long memberId) {
-        return memberSubscribeItemRepository.findByMemberId(memberId).orElseGet(MemberSubscribeItem::new);
+    public MemberSubscribeItem getMemberSubscribeItem() {
+        return memberSubscribeItemRepository
+        .findSubscribeMediaByMemberId(td.currentMemberId())
+        .orElseGet(MemberSubscribeItem::new);
     }
 }
